# BeerHolderBot

./: .gitignore  .gitlab-ci.yml  CHANGELOG.org  Cargo.toml  LICENSE  Readme.md  Readme.org  deaths.txt  run.sh  secret.sh.gpg
src/: main.rs
