[package]
name = "BeerHolderBot"
version = "0.2.0"
authors = ["Eric S. Londres <elondres@stevens.edu>"]
edition = "2018"
description = "A bot which holds your beer"
license = "AGPL-3.0-or-later"
homepage = "https://gitlab.com/slondr/BeerHolderBot"
repository = "https://gitlab.com/slondr/BeerHolderBot"
documentation = "https://gitlab.com/slondr/BeerHolderBot/-/blob/master/Readme.org"

[dependencies]
teloxide = "0.3"
teloxide-macros = "0.3"
log = "0.4.8"
pretty_env_logger = "0.4.0"
tokio = { version =  "0.2.11", features = ["rt-threaded", "macros", "sync"] }
lazy_static = "1.4.0"