[package]
name = "BeerHolderBot"
version = "0.3.2"
authors = ["Eric S. Londres <elondres@stevens.edu>"]
edition = "2018"
description = "A Telegram bot which holds your beer"
license = "AGPL-3.0-or-later"
homepage = "https://gitlab.com/slondr/BeerHolderBot"
repository = "https://gitlab.com/slondr/BeerHolderBot"
documentation = "https://gitlab.com/slondr/BeerHolderBot/-/blob/master/Readme.org"

[dependencies]
teloxide = { version = "0.4", features = ["macros"] }
teloxide-macros = "0.4"
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version =  "1.3", features = [ "rt-multi-thread", "macros" ] }
lazy_static = "1.4.0"
sqlite = "0.25.3"
reqwest = "0.10.10"
json = "0.12.4"